--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,6 +6,14 @@
     <title>Books List</title>
 </head>
 <body>
+    <h2>Search</h2>
+    <!-- Форма поиска -->
+    <form action="{{ url_for('search') }}" method="get">
+        <label for="title">Search for a book:</label>
+        <input type="text" id="title" name="title" placeholder="Enter book title">
+        <button type="submit">Search</button>
+    </form>
+
     <h1>Books</h1>
     <ul>
         {% for book in books %}
