--- a/web/templates/book_recommendations.html
+++ b/web/templates/book_recommendations.html
@@ -3,22 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suggested Books</title>
+    <title>Top 10 Recommended Books</title>
     <!-- Подключение Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="container my-4">
-    <h1 class="text-primary mb-4">Suggested Books</h1>
+    <h1 class="text-primary mb-4">Top 10 Recommended Books</h1>
 
-    <h2 class="text-secondary mb-3">Top 10 Suggested Books</h2>
     <ul class="list-group">
-        {% for rec_book in recommended_books[:10] %}
+        {% for rec_book in recommended_books %}
         <li class="list-group-item">
-            <a href="{{ url_for('book_info', title=rec_book['Title'].iloc[0]) }}" class="fw-bold">{{ rec_book['Title'].iloc[0] }}</a>
-            <p><strong>Description:</strong> {{ rec_book['Description'].iloc[0] }}</p>
-            {% if rec_book.get('Category', '').iloc[0] %}
-                <p><strong>Category:</strong> {{ rec_book['Category'].iloc[0] }}</p>
-            {% endif %}
+            <a href="{{ rec_book.url }}" class="fw-bold">{{ rec_book.name }}</a>
+            <p><strong>Description:</strong> {{ rec_book.description }}</p>
         </li>
         {% endfor %}
     </ul>
