--- a/web/templates/book_metric.html
+++ b/web/templates/book_metric.html
@@ -14,9 +14,7 @@
             <p><strong>Authors:</strong> {{ book.Authors }}</p>
             <p><strong>Description:</strong> {{ book.Description }}</p>
             <p><strong>Category:</strong> {{ book.Category }}</p>
-            <p><strong>Publisher:</strong> {{ book.Publisher }}</p>
-            <p><strong>Price:</strong> {{ book['Price Starting With ($)'] }}</p>
-            <p><strong>Publish Date:</strong> {{ book['Publish Date (Month)'] }} {{ book['Publish Date (Year)'] }}</p>
+            <p><strong>Publish Date:</strong> {{ book['Publish'] }}</p>
         </div>
 
         <h2 class="mb-4">Top 100 Recommended Books</h2>
